log

Wed 13 Mar 2024 08:57:20 PM UTC: 
 tests:  0|7
total_score: 0/70
a7a3762
Wed 13 Mar 2024 09:10:42 PM UTC: 
 exercises.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:38:18: error: expected expression before ‘)’ token
   38 |   int *newArr = ()
      |                  ^
exercises.c:38:8: error: unused variable ‘newArr’ [-Werror=unused-variable]
   38 |   int *newArr = ()
      |        ^~~~~~
exercises.c:39:16: error: control reaches end of non-void function [-Werror=return-type]
   39 |   return NULL; }
      |                ^
cc1: all warnings being treated as errors
Compilation failed
522b246
Wed 13 Mar 2024 09:11:27 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:49: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   27 | void reverseArray(int arr[], int size) { return 0;
      |                                                 ^
exercises.c:27:6: note: declared here
   27 | void reverseArray(int arr[], int size) { return 0;
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
df16dd6
Wed 13 Mar 2024 09:11:56 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:49: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   27 | void reverseArray(int arr[], int size) { return 0;}
      |                                                 ^
exercises.c:27:6: note: declared here
   27 | void reverseArray(int arr[], int size) { return 0;}
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c8be6ba
Wed 13 Mar 2024 09:12:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:49: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   27 | void reverseArray(int arr[], int size) { return NULL;}
      |                                                 ^~~~
exercises.c:27:6: note: declared here
   27 | void reverseArray(int arr[], int size) { return NULL;}
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
96efb48
Wed 13 Mar 2024 09:12:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
48b2015
Wed 13 Mar 2024 09:17:08 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:18: error: expected expression before ‘)’ token
   29 |   for (int i = 0;)
      |                  ^
exercises.c:30:1: error: expected expression before ‘}’ token
   30 | }
      | ^
exercises.c:29:12: error: unused variable ‘i’ [-Werror=unused-variable]
   29 |   for (int i = 0;)
      |            ^
exercises.c:28:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   28 |   int temp;
      |       ^~~~
exercises.c: In function ‘checkSorted’:
exercises.c:58:34: error: expected statement before ‘)’ token
   58 |   for (int i = 0; i < size ; i++))
      |                                  ^
exercises.c:60:15: error: ‘i’ undeclared (first use in this function)
   60 |       if (arr[i] > primerNum) return 1;
      |               ^
exercises.c:60:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:65:4: error: control reaches end of non-void function [-Werror=return-type]
   65 |    }
      |    ^
cc1: all warnings being treated as errors
Compilation failed
9cf1764
Wed 13 Mar 2024 09:17:30 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:57:34: error: expected statement before ‘)’ token
   57 |   for (int i = 0; i < size ; i++))
      |                                  ^
exercises.c:59:15: error: ‘i’ undeclared (first use in this function)
   59 |       if (arr[i] > primerNum) return 1;
      |               ^
exercises.c:59:15: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:64:4: error: control reaches end of non-void function [-Werror=return-type]
   64 |    }
      |    ^
cc1: all warnings being treated as errors
Compilation failed
64ace0c
Wed 13 Mar 2024 09:17:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:64:4: error: control reaches end of non-void function [-Werror=return-type]
   64 |    }
      |    ^
cc1: all warnings being treated as errors
Compilation failed
8ec8186
Wed 13 Mar 2024 09:18:03 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:63:4: error: control reaches end of non-void function [-Werror=return-type]
   63 |    }
      |    ^
cc1: all warnings being treated as errors
Compilation failed
9cd3aec
Wed 13 Mar 2024 09:20:19 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:60:7: error: ‘else’ without a previous ‘if’
   60 |       else if (arr[i] < primerNum) return -1;
      |       ^~~~
exercises.c:62:7: error: ‘else’ without a previous ‘if’
   62 |       else return 0;
      |       ^~~~
exercises.c:65:3: error: control reaches end of non-void function [-Werror=return-type]
   65 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
531b91d
Wed 13 Mar 2024 09:21:26 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:58:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   58 |       if (arr[i] > primerNum)
      |       ^~
exercises.c:60:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   60 |         return 1;
      |         ^~~~~~
exercises.c:62:7: error: ‘else’ without a previous ‘if’
   62 |       else if (arr[i] < primerNum){
      |       ^~~~
exercises.c:62:20: error: ‘i’ undeclared (first use in this function)
   62 |       else if (arr[i] < primerNum){
      |                    ^
exercises.c:62:20: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: At top level:
exercises.c:70:3: error: expected identifier or ‘(’ before ‘}’ token
   70 |   }
      |   ^
exercises.c: In function ‘checkSorted’:
exercises.c:68:5: error: control reaches end of non-void function [-Werror=return-type]
   68 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
14fe51e
Sat 16 Mar 2024 08:04:39 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:62:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   62 |       if (arr[i] > primerNum)
      |       ^~
exercises.c:64:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   64 |         return 1;
      |         ^~~~~~
exercises.c:66:7: error: ‘else’ without a previous ‘if’
   66 |       else if (arr[i] < primerNum){
      |       ^~~~
exercises.c:66:20: error: ‘i’ undeclared (first use in this function)
   66 |       else if (arr[i] < primerNum){
      |                    ^
exercises.c:66:20: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: At top level:
exercises.c:74:3: error: expected identifier or ‘(’ before ‘}’ token
   74 |   }
      |   ^
exercises.c: In function ‘checkSorted’:
exercises.c:72:5: error: control reaches end of non-void function [-Werror=return-type]
   72 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
46aa974
Sat 16 Mar 2024 08:05:13 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
1429b7d
Sat 16 Mar 2024 08:08:08 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:38: error: invalid operands to binary * (have ‘int *’ and ‘long unsigned int’)
   42 |   int newArr = (int*)malloc (newSize * sizeof(int));
      |                                      ^
exercises.c:43:21: error: comparison between pointer and integer [-Werror]
   43 |   for (int i = 0; i < newSize; i++){
      |                     ^
exercises.c:45:13: error: subscripted value is neither array nor pointer nor vector
   45 |       newArr[i] = arr[i];
      |             ^
exercises.c:48:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   48 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
7b7cf77
